feat(orders): let anonymous guests choose requester and responsible org unit (#411)
* feat(orders): let anonymous guests choose requester and responsible org unit

The public job-order create form left an anonymous guest with an empty
"Auftraggeber" (requesting) picker and a "bearbeitende Einheit"
(responsible) picker that was missing the profit-eligible Spezialkommandos,
and the responsible choice was ignored server-side.

- Both pickers are now sourced from one permitAll GET /api/v1/org-units/active
  (its option DTO gains an isProfitEligible flag): requesting offers every
  active org unit, responsible the profit-eligible subset (squadrons + SKs).
  This removes the authenticated-only SK-catalog fetch that dropped every SK
  for a guest.
- The responsible picker is pre-selected to the configured intake
  Spezialkommando (job_order.intake_special_command_id) for guests.
- A guest's responsible pick is now honoured when it is profit-eligible; an
  absent, non-profit, or unresolvable pick falls back to the intake SK, so a
  guest can never direct work to a non-profit unit.

Frontend mirror DTO updated, openapi.json regenerated, unit + MVC tests
added/updated. Builds on the org-unit scope changes from #410.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@gmail.com>

* test(e2e): cover anonymous job-order creation (material + item, picker scoping)

Adds AnonymousJobOrderE2eTest (UC-12): an unauthenticated guest creates a
material AND an item order through the UI, choosing the requester and the
responsible unit, plus two API-only fallback edges (non-profit / omitted
responsible -> intake SK) the UI cannot reach. Asserts the picker scoping
(requesting = all org units, responsible = profit-only with the non-profit SK
absent, intake SK pre-selected) and reads the persisted units back as an admin
(a guest cannot read the gated queue).

Extends BackendSeeder (SK profit-eligibility, intake-SK system